# ts3-joininfo

./: .gitignore  Cargo.toml  build-linux.sh  build-win.ps1  build.ps1  ts3-joininfo.code-workspace  ts3joininfo.ts3_plugin
.github/workflows/: build.yaml
src/: constants.rs  format.rs  lib.rs  util.rs
ts3_package/: package.ini
